backends/k8s/titiler/yaml/titiler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: titiler
  namespace: titiler
  labels:
    app: titiler
spec:
  ports:
    - name: web
      port: 80
      targetPort: 8000
  selector:
    app: titiler
  type: ClusterIP # LoadBalancer # NodePort #  
  ## load balancer will make the service accessible on the internet using an external ip but no https
